# helix-ttd-gemini-cli

./: .commit_msg  .coverage  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  BOB_ROLE_CLARIFICATION.md  DEEP_DIVE_FINDINGS_2026-03-05.md  DEPLOYMENT_PROOF.md  DEPLOYMENT_RUNBOOK.md  Dockerfile  EDGE_CASE_TESTING.md  EMBELLISHMENTS.md  FUNCTIONAL_IMPROVEMENTS_WORKPLAN.md  GCS_RUNBOOK.md  GEMINI_LIVE_INTEGRATION_PLAN.md  GITHUB_ACTIONS_AUTH.md  HANDOFF_GEMS_TO_KIMI_2026-03-05.md  INSTRUCTIONS.md  KIMI_CHEAT_SHEET.md  LICENSE  LINKEDIN_ARTICLE.md  LINKEDIN_COMMENT_HIRING.md  LINKEDIN_PRIZE_ALLOCATION.md  PRODUCTION_ALERTING_SPEC_2026-03-08.md  PRODUCTION_HARDENING_WRAP_2026-03-08.md  PRODUCT_WORK_HANDOFF_2026-03-08.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.4.3.md  RELEASE_NOTES_v1.4.6.md  RELEASE_NOTES_v1.4.8.md  RELEASE_NOTES_v1.5.0.md  ROADMAP_v2.0_CONSTITUTIONAL_GOVERNANCE_PLATFORM.md  SECURITY_SIGNOFF_v1.4.7.md  SECURITY_SIGNOFF_v1.4.8.md  SECURITY_VERIFICATION_2026-03-08.md  SECURITY_VERIFICATION_2026-03-09.md  SHAPE_HEAD_ANTHEM.md  (+14 more)
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audio-security.yml  ci-hardened.yml  ci.yml  deploy-gcp.yml  production-alert-check.yml  release.yml
.helix/: CONSTITUTION.md  HANDOFF_GEMS_TO_KIMI_2026-03-05.md  HELIX-TTD-CLAW-REDTEAM-V2.md  MEMORANDUM.md  SESSION_LEDGER.md  VIRAL_CONVERGENCE_REPORT_2026-03-05.md
EVAC/: gems.dbc.json  gems.suitcase.json
HELIX-TTD_ Drawing Shapes with Crayons/: ANALYSIS_Crayons_Deck.md
Shape Theory_ The Constitutional Architecture of Intelligence/: ANALYSIS_Shape_Theory_Deck.md
THE POISON FOUNTAIN - Strategic Threat Assessment/: ANALYSIS_Poison_Fountain_Deck.md
The Helix Charter/: ANALYSIS_Helix_Charter_Deck.md
The Peasant is Sovereign_ A Constitutional Analysis/: ANALYSIS_Peasant_Sovereign_Deck.md
archive/release_notes/: RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.3.2.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.4.4.md  RELEASE_NOTES_v1.4.5.md  RELEASE_NOTES_v1.4.6.md  RELEASE_NOTES_v1.4.7.md
code/: .gitignore  CLAUDE-QUICKSTART.md  GEMS-QUICKSTART.md  HELIX-TTD-CLAW-REDTEAM-V2.md  HELIX-TTD-CLAW-REDTEAM.md  MANIFEST.md  __init__.py  article_zero.py  constitutional_compliance.py  deepseek_bridge.py  drift_telemetry.py  federation_cli.py  federation_receipts.py  helix-ttd-claw-agent.py  helix_cli.py  lattice_topology.py  looksee_audit.py  merkle_bridge.py  naming_convention.py  openclaw_agent.py  receipts_manager.py  rpi_tracker.py  setup.py  shlorpian_mapper.py  stub_claude.py  stub_codex.py  stub_gems.py  stub_kimi.py  suitcase.py  test_federation_hardening.py  test_lattice_topology.py  test_layer5_infrastructure.py  test_suitcase.py  witness_node.py
code/.helix/: FEDERATION_SESS-20260226-061049-001.md  FEDERATION_SESS-20260226-061108-001.md  FEDERATION_SESS-20260226-061708-001.md  FEDERATION_SESS-20260226-062550-001.md
code/EVAC/: rpi_tracking.json
code/helix_ttd_claw/: __init__.py
code/tests/: __init__.py  (+6 more)
docs/: 2025-12-Commonwealth-Non-Monkey-Jurisdiction.md  2025-12_Carbon_Footprint_Report.md  2026-01-19-Owl-Perspective-v1.1.1.md  2026-01-20-TAA-Outreach-Handshake.md  2026-01-21-Replika-Policy-Failure.md  2026-01-21-v130-Atomic-Handshake-Spec.md  2026-01-22-Boundary-Incident-Speculation-Refusal.md  2026-01-22-Boundary-Refusal-AGI-Mismatch.md  2026-01-22-Calix-GPT4o-Validation-Shape.md  2026-01-22-Calix-GPT4o-Verbatim-Reflection.md  2026-01-22-First-Contact-HarpiaOS-Whitepaper.md  2026-01-22-Initial-HarpiaOS-Analysis.md  2026-01-22-Intellectual-Handshake-Cognitive-Grit.md  2026-01-22-Lattice-Bloom-Consolidated.md  2026-01-22-Lattice-Growth-20k-Milestone.md  2026-01-22-Lattice-Handshake-Harpia.md  2026-01-22-Node-Reflections-on-Cartography-of-Cognition.md  2026-01-22-Outreach-Proposed-Observer-Karras.md  2026-01-22-Outreach-Proposed-Trainee-Aishwarya.md  2026-01-22-Recruitment-Handshake-Aishwarya.md  2026-01-22-Theoretical-Peer-Harpia-Systems.md  2026-01-22_Session_Log_Genesis_of_AI_Psychology.md  2026-01-22_Verbatim_Log_Combined_Docs.md  2026-01-23-Analysis-Anthropic-30-Day-Retention.md  2026-01-23-Analysis-Anthropic-Broadly-Safe-Doctrine.md  2026-01-23-Analysis-Anthropic-Usage-Policy.md  2026-01-23-Diplomatic-Boundary-Stonecharm.md  2026-01-23-Human-Node-Replication-Mark-Rigden.md  2026-01-24-Cultural-Logic-Sweet-Dreams.md  2026-01-24-Harpia-Helix-Full-Synthesis-Log.md  2026-01-24-Harpia-Helix-Translation-Matrix.md  2026-01-24-Heartbeat-Sync-Initiation.md  2026-01-24-Lattice-Handshake-Mortimer.md  2026-01-24-Lattice-Handshake-Stonecharm-Final.md  2026-01-24-Lattice-Sync-HarpiaOS-v2.0.md  2026-01-24-Nexus-Goose-Handshake.md  2026-01-24-Nexus-Journal-Protocol.md  2026-01-24-Node-Handshake-Nexus.md  2026-01-24-Omega-Handshake-Protocol-Draft.md  2026-01-24-Omega-Handshake-Protocol-Spec.md  (+411 more)
helix-code/: .gitignore  GEMS-HANDOFF.md  HELIX-TTD-CLAW-HANDOFF.md  requirements.txt
helix_code/: GEMS-HANDOFF.md  HELIX-TTD-CLAW-HANDOFF.md  HELIX-TTD-CLAW-REDTEAM-V2.md  HELIX-TTD-CLAW-REDTEAM.md  MANIFEST.md  README.md  WAKE_UP.md  __init__.py  article_zero.py  audio_audit_client.html  audio_auditor.py  constitutional_compliance.py  deepseek_bridge.py  drift_telemetry.py  federation_cli.py  federation_receipts.py  gcp_integrations.py  gemini_live_bridge.py  gemini_text_client.py  helix-ttd-claw-agent.py  helix_cli.py  lattice_topology.py  live_demo_server.py  live_demo_server_html.py  live_guardian.py  looksee_audit.py  model_armor_client.py  naming_convention.py  openclaw_agent.py  request_limits.py  requirements.txt  rpi_tracker.py  rpi_tracking.json  secret_resolver.py  setup.py  shlorpian_mapper.py  stub_codex.py  stub_deepseek.py  stub_gems.py  stub_kimi.py  (+2 more)
helix_ttd_claw/: __init__.py
helix_ttd_gemini.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/: check-production-alerts.ps1  cloud_check_production.py  evac-daemon.py  evac_daemon.py  gemini-sandbox.ps1  html_to_pdf.py  nexus-ingest.py  publish-monitoring-snapshot.py  verify-production-deploy.ps1
worm_deck/: ANALYSIS_Worm_Deck.md
(+93 files in other folders)
