# Helix-TTD Python Toolkit Configuration
# Constitutional AI governance utilities
# License: Apache-2.0

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-ttd"
version = "1.0.0"
authors = [
    {name = "Stephen Hope", email = "sbhope@gmail.com"},
]
description = "Constitutional AI governance utilities for the Helix-TTD Federation"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
helix = "helix_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "isort>=5.12",
]

# ============================================================
# RUFF: Constitutional Python Linting
# ============================================================
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    # Docstring ignores (temporary for v1.4.0 release)
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D205",  # 1 blank line required between summary line and description
    "D212",  # Multi-line docstring summary should start at the first line
    "D415",  # First line should end with punctuation
    # Style ignores
    "E501",  # Line too long (handled by formatter)
    "E712",  # Comparison to True/False (common in tests)
    "E402",  # Module level import not at top (sys.path manipulation)
    "W291",  # Trailing whitespace
    "W293",  # Blank line contains whitespace
    "F841",  # Unused variable
    "B905",  # zip without strict=
    "N818",  # Exception name suffix Error
    # Simplification ignores
    "SIM102", # Nested if statements
    "SIM108", # Ternary operator
    "SIM110", # Use all() instead of for loop
    "SIM118", # Use key in dict instead of dict.keys()
    "B007",  # Unused loop control variable
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"helix_code/tests/*" = ["D", "S"]
"tools/*" = ["D100"]

# ============================================================
# BLACK: Sovereign Code Formatting
# ============================================================
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ============================================================
# ISORT: Import Ordering
# ============================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# ============================================================
# MYPY: Epistemic Type Checking
# ============================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# ============================================================
# PYTEST: Verification Framework
# ============================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["helix_code/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
markers = [
    "constitutional: Tests constitutional compliance",
    "epistemic: Tests epistemic labeling",
    "federation: Tests federation integration",
    "slow: Marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["helix_code"]
omit = [
    "helix_code/tests/*",
    "helix_code/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 80
